# open_cv_utils

./: CMakeLists.txt  lbp.cpp  ltp.cpp  open_cv_utils.sublime-project  open_cv_utils.sublime-workspace  sift.cpp
